# phat-dashboard

./: .gitignore  README.md  witnessed-build
.github/workflows/: build-and-release.yaml  build.yaml  witnessed-build.yaml
evm/: README.md  arguments.js  hardhat.config.ts
evm/contracts/: MetaTransaction.sol  PhatRollupAnchor.sol  TestLensOracle.sol  TestLensPubOracle.sol  TestPriceReceiver.sol
evm/scripts/: deploy-test.ts  testnet-push-malformed-request.ts  testnet-push-request.ts  testnet-set-attestor.ts
phat/: .gitignore  README.md  devphase.config.ts  package.json  rust-toolchain.toml
phat/artifacts/action_evm_transaction/: action_evm_transaction.contract  action_evm_transaction.json  action_evm_transaction.wasm
phat/artifacts/action_offchain_rollup/: action_offchain_rollup.contract  action_offchain_rollup.json  action_offchain_rollup.wasm
phat/artifacts/brick_profile/: brick_profile.contract  brick_profile.json  brick_profile.wasm
phat/artifacts/brick_profile_factory/: brick_profile_factory.contract  brick_profile_factory.json  brick_profile_factory.wasm
phat/artifacts/lego/: lego.contract  lego.json  lego.wasm
phat/artifacts/qjs/: metadata.json  qjs.contract  qjs.json  qjs.wasm
phat/artifacts/simple_cloud_wallet/: simple_cloud_wallet.contract  simple_cloud_wallet.json  simple_cloud_wallet.wasm
phat/contracts/action_evm_transaction/: Cargo.toml  lib.rs
phat/contracts/action_offchain_rollup/: .env_sample  Cargo.toml  README.md  lib.rs  witnessed-build
phat/contracts/brick_profile/: Cargo.toml  README.md  lib.rs
phat/contracts/brick_profile_factory/: Cargo.toml  lib.rs
phat/contracts/codebase/: Cargo.toml  lib.rs
phat/contracts/codebase/example/: Cargo.toml  lib.rs
phat/contracts/lego/: Cargo.toml  build.rs  lib.rs  witnessed-build
phat/contracts/lego/js/: .eslintrc.js  package.json  spack.config.js  webpack.config.js
phat/contracts/lego/js/src/: index.ts
phat/contracts/lego/legojs/: Cargo.toml  build.rs
phat/contracts/lego/legojs/js/src/: polyfills.js
phat/contracts/lego/legojs/src/: lib.rs
phat/contracts/lego_rs/: Cargo.toml  lib.rs
phat/contracts/phat_codebase/: Cargo.toml
phat/contracts/phat_codebase/example/: lib.rs
phat/contracts/simple_cloud_wallet/: .env_sample  .gitignore  Cargo.toml  README.md  lib.rs
phat/contracts/tagbag/: Cargo.toml  lib.rs
phat/crates/js/: Cargo.toml  lib.rs
phat/crates/logging/: Cargo.toml
phat/crates/logging/src/: lib.rs
phat/crates/phat-codebase-driver/: Cargo.toml
phat/crates/phat-codebase-driver/src/: lib.rs
phat/crates/rollup/: Cargo.toml
phat/crates/rollup/src/: lib.rs
phat/crates/rollup/src/clients/: evm.rs  substrate.rs
phat/example-oracles/lens_pub/: package.json
phat/example-oracles/lens_pub/src/: index.ts
phat/example-oracles/lens_stats/: package.json
phat/example-oracles/lens_stats/src/: index.ts
phat/example-oracles/lens_stats_async/: package.json
phat/lens_oracle/: package.json
phat/res/: receiver.abi.json
phat/scripts/: lego-types.py
phat/tests/: legoActions.test.ts  utils.ts
phat/tests-rs/: Cargo.toml
phat/tests-rs/src/: lib.rs
phat/typings/: ActionEvmTransaction.ts  ActionOffchainRollup.ts  BrickProfile.ts  BrickProfileFactory.ts  Lego.ts  PinkSystem.ts  Qjs.ts  SimpleCloudWallet.ts  System.ts
scripts/: build-abi.sh
