[package]
name = "brick_profile_factory"
version = "0.1.0"
authors = ["Shelven Zhou <favoring.zhou49@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

this-crate = "0.1.0"
pink = { version = "0.4", default-features = false }

brick_profile = { path = "../brick_profile", default-features = false, features = ["ink-as-dependency"] }
hex-literal = "0.3.3"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink/std",
    "brick_profile/std",
]
ink-as-dependency = []
e2e-tests = []
