[package]
name = "phat-codebase"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false, features = ["static-buffer-512K"]}
pink = { version = "0.5.0", package = "pink-extension", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
this-crate = "0.1.0"

driver = { package = "phat-codebase-driver", path = "../../crates/phat-codebase-driver", version = "0.1", default-features = false }

[dev-dependencies]

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink/std",
    "driver/std",
]
ink-as-dependency = []
e2e-tests = []

[patch.crates-io]
ink = { git = "https://github.com/kvinwang/ink.git", branch = "config-buffer-4.3.0" }
ink_env = { git = "https://github.com/kvinwang/ink.git", branch = "config-buffer-4.3.0" }
