[package]
name = "lego"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

this-crate = "0.1.0"
pink-extension = { version = "0.4", default-features = false }
phat_js = { version = "0.1.3", default-features = false }
legojs = { path = "legojs" }

[lib]
name = "lego"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "phat_js/std",
    "pink-extension/std",
]
ink-as-dependency = []
