[package]
name = "lego_rs"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
pink = { package = "pink-extension", version = "0.5", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
pink-json = { version = "0.4.0", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
logging = { path = "../../crates/logging", default-features = false }
this-crate = "0.1"

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "pink/std",
    "scale/std",
    "scale-info/std",
    "pink-json/std",
    "serde/std",
    "logging/std",
]
ink-as-dependency = []
e2e-tests = []

[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "patched-v1.0.188" }
