[package]
name = "simple_cloud_wallet"
version = "0.1.0"
authors = ["Shelven Zhou <favoring.zhou49@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "4", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitive-types = { version = "0.12", default-features = false, features = ["codec", "scale-info"] }

secp256k1 = { version = "0.24.3", default-features = false }
pink-extension = { version = "0.4", default-features = false }
pink-json = { git = "https://github.com/Phala-Network/pink-json.git", branch = "pink", default-features = false, features = ["de-number-as-str"] }
pink-web3 = { version = "0.20", default-features = false, features = ["pink", "signing"] }

[dev-dependencies]
dotenvy = "0.15"
pink-extension-runtime = { version = "0.4", default-features = false }
env_logger = "0.9"
hex = "0.4"

[lib]
name = "simple_cloud_wallet"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "primitive-types/std",
    "pink-extension/std",
    "pink-json/std",
    "pink-web3/std",
]
ink-as-dependency = []

# magic to remove floats in pink-json
[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "pink" }
