[package]
name = "phat-codebase-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
pink = { version = "0.4", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = ["pink/std", "ink/std", "scale/std", "scale-info/std"]
